# sphinx-examples

./: .gitignore  .pre-commit-config.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.md  reference.md
src/sphinx_demo/: __init__.py
src/sphinx_demo/_static/styles/: sphinx-demo.css
src/sphinx_examples/: __init__.py
src/sphinx_examples/_static/styles/: sphinx-examples.css
